# arca23k-baseline

./: .gitignore  LICENSE  README.rst  default.ini  pyproject.toml  requirements.txt
baseline/: cli.py  evaluate.py  predict.py  train.py
baseline/system/: __init__.py  datasets.py  evaluation.py  inference.py  label_noise.py  system.py  training.py  utils.py
baseline/system/models/: __init__.py  resnet.py  vgg.py
scripts/: download_arca23k.sh  download_fsd50k.sh
