[tool.poetry]
name = "arca23k-baseline"
version = "0.1.0"
description = "The ARCA23K baseline system"
authors = ["Turab Iqbal <t.iqbal@surrey.ac.uk>"]
license = "ISC"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jaffadata = "^0.3.0"
jaffalearn = "^0.2.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
torch = "^1.8.1"
torchaudio = "^0.8.1"
torchmetrics = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
